apicurio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apicurio
  namespace: argocd
spec:
  selector:
    app: apicurio
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
