apicurio/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: apicurio-registry
  namespace: argocd
spec:
  to:
    kind: Service
    name: apicurio-registry
  port:
    targetPort: 80
  tls:
    termination: edge
